erDiagram
    User {
        int id PK
        string password
        date last_login
        boolean is_superuser
        string username
        string first_name
        string last_name
        string email
        boolean is_staff
        boolean is_active
        date date_joined
        string phone
        boolean email_verified
    }

    UserProfile {
        int id PK
        int user_id FK
        string bio
        date created_at
    }

    Hotel {
        int id PK
        string name
        string city
        string address
        string description
        float rating
        string image
        int owner_id FK
        date created_at
    }

    Room {
        int id PK
        int hotel_id FK
        string title
        string description
        decimal price_per_night
        int capacity
        boolean is_available
        date created_at
    }

    Booking {
        int id PK
        int user_id FK
        int room_id FK
        date check_in
        date check_out
        int guests
        decimal total_price
        string status
        date created_at
    }

    User ||--o{ UserProfile : contains
    User ||--o{ Hotel : contains
    Hotel ||--o{ Room : contains
    User ||--o{ Booking : contains
    Room ||--o{ Booking : contains